GiRaFFE_NRPy_C2P_P2C: Updated the module, tutorial, and unit test to not assume a stored gammadet.

--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -132,7 +132,7 @@
    ],
    "source": [
     "import GiRaFFE_NRPy.GiRaFFE_NRPy_C2P_P2C as C2P_P2C\n",
-    "C2P_P2C.GiRaFFE_NRPy_C2P(StildeD,BU,gammaDD,gammaUU,gammadet,betaU,alpha)\n",
+    "C2P_P2C.GiRaFFE_NRPy_C2P(StildeD,BU,gammaDD,betaU,alpha)\n",
     "\n",
     "values_to_print = [\\\n",
     "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"StildeD0\"),rhs=C2P_P2C.outStildeD[0]),\\\n",
@@ -183,7 +183,7 @@
     "sqrt4pi = par.Cparameters(\"REAL\",thismodule,\"sqrt4pi\",\"sqrt(4.0*M_PI)\")\n",
     "TINYDOUBLE = par.Cparameters(\"REAL\",thismodule,\"TINYDOUBLE\",1e-100)\n",
     "\n",
-    "C2P_P2C.GiRaFFE_NRPy_P2C(gammadet,gammaDD,betaU,alpha,  ValenciavU,BU, sqrt4pi)\n",
+    "C2P_P2C.GiRaFFE_NRPy_P2C(gammaDD,betaU,alpha,  ValenciavU,BU, sqrt4pi)\n",
     "\n",
     "values_to_print = [\\\n",
     "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"StildeD0\"),rhs=C2P_P2C.StildeD[0]),\\\n",
@@ -371,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting Validation//C2P_P2C_unit_test.C\n"
+      "Writing Validation//C2P_P2C_unit_test.C\n"
      ]
     }
    ],
@@ -405,18 +405,17 @@
     "#define GAMMAUU11GF 9\n",
     "#define GAMMAUU12GF 10\n",
     "#define GAMMAUU22GF 11\n",
-    "#define GAMMADETGF 12\n",
-    "#define BETAU0GF 13\n",
-    "#define BETAU1GF 14\n",
-    "#define BETAU2GF 15\n",
-    "#define ALPHAGF 16\n",
-    "#define BU0GF 17\n",
-    "#define BU1GF 18\n",
-    "#define BU2GF 19\n",
-    "#define VALENCIAVU0GF 20\n",
-    "#define VALENCIAVU1GF 21\n",
-    "#define VALENCIAVU2GF 22\n",
-    "#define NUM_AUXEVOL_GFS 23\n",
+    "#define BETAU0GF 12\n",
+    "#define BETAU1GF 13\n",
+    "#define BETAU2GF 14\n",
+    "#define ALPHAGF 15\n",
+    "#define BU0GF 16\n",
+    "#define BU1GF 17\n",
+    "#define BU2GF 18\n",
+    "#define VALENCIAVU0GF 19\n",
+    "#define VALENCIAVU1GF 20\n",
+    "#define VALENCIAVU2GF 21\n",
+    "#define NUM_AUXEVOL_GFS 22\n",
     "\n",
     "#define STILDED0GF 0\n",
     "#define STILDED1GF 1\n",
@@ -575,8 +574,6 @@
     "    gyy[0] = gammaDD11;\n",
     "    gyz[0] = gammaDD12;\n",
     "    gzz[0] = gammaDD22;\n",
-    "\n",
-    "    auxevol_gfs[IDX4S(GAMMADETGF, i0,i1,i2)] = tmp5;\n",
     "    \n",
     "    auxevol_gfs[IDX4S(BETAU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    const double betaxL = auxevol_gfs[IDX4S(BETAU0GF, i0,i1,i2)];\n",
@@ -667,7 +664,7 @@
      "text": [
       "Now compiling, should take ~2 seconds...\n",
       "\n",
-      "Finished in 0.684131383895874 seconds.\n",
+      "Finished in 0.6858301162719727 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
@@ -679,12 +676,12 @@
       "of outputs should show at least 10 significant digits of agreement. \n",
       "\n",
       "Checking the Poynting Fluxes:\n",
-      "SDA: 16.5, 15.9, 16.2\n",
+      "SDA: 16.5, 15.9, 16.0\n",
       "\n",
       "\n",
       "Checking the Valencia Velocities:\n",
-      "SDA: 16.2, 16.7, inf\n",
-      "Finished in 0.12969589233398438 seconds.\n",
+      "SDA: 16.2, 16.7, 16.6\n",
+      "Finished in 0.18187355995178223 seconds.\n",
       "\n",
       "\n"
      ]
