GiRaFFE_NRPy_A2B: Updated the A2B driver to no longer assume a stored gammadet.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
@@ -101,8 +101,10 @@
     "# Set the finite-differencing order to 2\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 2)\n",
     "\n",
-    "# Register the gridfunction gammadet. This determinant will be calculated separately\n",
-    "gammadet = gri.register_gridfunctions(\"AUXEVOL\",\"gammadet\")\n",
+    "# Declare the three metric and compute the sqrt of its determinant.\n",
+    "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gammaDD\",\"sym01\")\n",
+    "import GRHD.equations as gh\n",
+    "gh.compute_sqrtgammaDET(gammaDD)\n",
     "\n",
     "# Import the Levi-Civita symbol and build the corresponding tensor.\n",
     "# We already have a handy function to define the Levi-Civita symbol in WeylScalars\n",
@@ -113,8 +115,8 @@
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            LCijk = LeviCivitaDDD[i][j][k]\n",
-    "            #LeviCivitaDDD[i][j][k] = LCijk * sp.sqrt(gho.gammadet)\n",
-    "            LeviCivitaUUU[i][j][k] = LCijk / sp.sqrt(gammadet)\n"
+    "            #LeviCivitaDDD[i][j][k] = LCijk * gh.sqrtgammaDET\n",
+    "            LeviCivitaUUU[i][j][k] = LCijk / gh.sqrtgammaDET\n"
    ]
   },
   {
@@ -130,12 +132,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1.a: A useful function\n",
     "AD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"AD\")\n",
     "BU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"BU\")\n",
     "AD_dD = ixp.declarerank2(\"AD_dD\",\"nosym\")\n",
     "BU = ixp.zerorank1() # BU is already registered as a gridfunction, but we need to zero its values and declare it in this scope.\n",
-    "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
@@ -259,10 +259,25 @@
     "            dz_Ay = invdx2*((3.0/2.0)*in_gfs[IDX4S(AD1GF, i0,i1,i2)] - 2*in_gfs[IDX4S(AD1GF, i0,i1,i2-1)] + (1.0/2.0)*in_gfs[IDX4S(AD1GF, i0,i1,i2-2)]);\n",
     "        }\n",
     "        // Compute the magnetic field in the normal way, using the previously calculated derivatives.\n",
-    "        const REAL sqrtgammadet = sqrt(auxevol_gfs[IDX4S(GAMMADETGF, i0,i1,i2)]);\n",
-    "        auxevol_gfs[IDX4S(BU0GF, i0,i1,i2)] = (dy_Az-dz_Ay)/sqrtgammadet;\n",
-    "        auxevol_gfs[IDX4S(BU1GF, i0,i1,i2)] = (dz_Ax-dx_Az)/sqrtgammadet;\n",
-    "        auxevol_gfs[IDX4S(BU2GF, i0,i1,i2)] = (dx_Ay-dy_Ax)/sqrtgammadet;\n",
+    "        const double gammaDD00 = auxevol_gfs[IDX4S(GAMMADD00GF, i0,i1,i2)];\n",
+    "        const double gammaDD01 = auxevol_gfs[IDX4S(GAMMADD01GF, i0,i1,i2)];\n",
+    "        const double gammaDD02 = auxevol_gfs[IDX4S(GAMMADD02GF, i0,i1,i2)];\n",
+    "        const double gammaDD11 = auxevol_gfs[IDX4S(GAMMADD11GF, i0,i1,i2)];\n",
+    "        const double gammaDD12 = auxevol_gfs[IDX4S(GAMMADD12GF, i0,i1,i2)];\n",
+    "        const double gammaDD22 = auxevol_gfs[IDX4S(GAMMADD22GF, i0,i1,i2)];\n",
+    "        /* \n",
+    "        * NRPy+ Finite Difference Code Generation, Step 2 of 1: Evaluate SymPy expressions and write to main memory:\n",
+    "        */\n",
+    "        const double tmp0 = gammaDD11*gammaDD22;\n",
+    "        const double tmp1 = pow(gammaDD12, 2);\n",
+    "        const double tmp2 = gammaDD02*gammaDD12;\n",
+    "        const double tmp3 = pow(gammaDD01, 2);\n",
+    "        const double tmp4 = pow(gammaDD02, 2);\n",
+    "        const double tmp5 = gammaDD00*tmp0 - gammaDD00*tmp1 + 2*gammaDD01*tmp2 - gammaDD11*tmp4 - gammaDD22*tmp3;\n",
+    "        const double tmp6 = 1.0/sqrt(tmp5);\n",
+    "        auxevol_gfs[IDX4S(BU0GF, i0,i1,i2)] = (dy_Az-dz_Ay)*tmp6;\n",
+    "        auxevol_gfs[IDX4S(BU1GF, i0,i1,i2)] = (dz_Ax-dx_Az)*tmp6;\n",
+    "        auxevol_gfs[IDX4S(BU2GF, i0,i1,i2)] = (dx_Ay-dy_Ax)*tmp6;\n",
     "    }\n",
     "}\n"
    ]
