--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb
@@ -101,7 +101,9 @@
     "# Set the finite-differencing order to 2\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 2)\n",
     "\n",
-    "Use_Gaussian_Data = True\n"
+    "Use_Gaussian_Data = True\n",
+    "\n",
+    "a,b,c,d,e,f,g,h,l,m,n,o,p,q,r,s,t,u = par.Cparameters(\"REAL\",thismodule,[\"a\",\"b\",\"c\",\"d\",\"e\",\"f\",\"g\",\"h\",\"l\",\"m\",\"n\",\"o\",\"p\",\"q\",\"r\",\"s\",\"t\",\"u\"],1e300)\n"
    ]
   },
   {
@@ -132,7 +134,6 @@
    "outputs": [],
    "source": [
     "if not Use_Gaussian_Data:\n",
-    "    a,b,c,d,e,f,g,h,l,m,n,o,p,q,r,s,t,u = par.Cparameters(\"REAL\",thismodule,[\"a\",\"b\",\"c\",\"d\",\"e\",\"f\",\"g\",\"h\",\"l\",\"m\",\"n\",\"o\",\"p\",\"q\",\"r\",\"s\",\"t\",\"u\"],1e300)\n",
     "    is_gaussian = par.Cparameters(\"int\",thismodule,\"is_gaussian\",0)\n",
     "    gammadet = gri.register_gridfunctions(\"AUXEVOL\",\"gammadet\")\n",
     "\n",
@@ -174,7 +175,6 @@
    "outputs": [],
    "source": [
     "if Use_Gaussian_Data:\n",
-    "    a,b,c,d,e,f,g,h,l,m,n,o,p = par.Cparameters(\"REAL\",thismodule,[\"a\",\"b\",\"c\",\"d\",\"e\",\"f\",\"g\",\"h\",\"l\",\"m\",\"n\",\"o\",\"p\"],1e300)\n",
     "    is_gaussian = par.Cparameters(\"int\",thismodule,\"is_gaussian\",1)\n",
     "    gammadet = gri.register_gridfunctions(\"AUXEVOL\",\"gammadet\")\n",
     "\n",
@@ -249,29 +249,81 @@
     "## Step 1.d: The magnetic field $B^i$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{magnetic}$$\n",
     "\n",
-    "Next, we'll let NRPy+ compute derivatives analytically according to $$B^i = \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k.$$ Then we can carry out two separate tests to verify the numerical derivatives. First, we will verify that when we let the cubic terms be zero, the two calculations of $B^i$ agree to roundoff error. Second, we will verify that when we set the cubic terms, our error is dominated by trunction error that converges to zero at the expected rate. "
+    "Next, we'll let NRPy+ compute derivatives analytically according to $$B^i = \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k.$$ Then we can carry out two separate tests to verify the numerical derivatives. First, we will verify that when we let the cubic terms be zero, the two calculations of $B^i$ agree to roundoff error. Second, we will verify that when we set the cubic terms, our error is dominated by trunction error that converges to zero at the expected rate. \n",
+    "\n",
+    "We will need a sample metric $\\gamma_{ij}$ for $\\sqrt{\\gamma}$. We will thus write a function with the following arbitrary equations. \n",
+    "\\begin{align}\n",
+    "\\gamma_{xx} &= ax^3 + by^3 + cz^3 + dy^2 + ez^2 + 1 \\\\\n",
+    "\\gamma_{yy} &= gx^3 + hy^3 + lz^3 + mx^2 + nz^2 + 1 \\\\\n",
+    "\\gamma_{zz} &= px^3 + qy^3 + rz^3 + sx^2 + ty^2 + 1. \\\\\n",
+    "\\gamma_{xy} &= \\frac{1}{10} \\exp\\left(-\\left((x-b)^2+(y-c)^2+(z-d)^2\\right)\\right) \\\\\n",
+    "\\gamma_{xz} &= \\frac{1}{10} \\exp\\left(-\\left((x-g)^2+(y-h)^2+(z-l)^2\\right)\\right) \\\\\n",
+    "\\gamma_{yz} &= \\frac{1}{10} \\exp\\left(-\\left((x-n)^2+(y-o)^2+(z-p)^2\\right)\\right), \\\\\n",
+    "\\end{align}\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output C function calculate_metric_gfs() to file Validation/calculate_metric_gfs.h\n"
+     ]
+    }
+   ],
    "source": [
+    "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gammaDD\",\"sym01\",DIM=3)\n",
+    "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Cartesian\")\n",
+    "rfm.reference_metric()\n",
+    "x = rfm.xxCart[0]\n",
+    "y = rfm.xxCart[1]\n",
+    "z = rfm.xxCart[2]\n",
+    "\n",
+    "gammaDD[0][0] = a*x**3 + b*y**3 + c*z**3 + d*y**2 + e*z**2 + sp.sympify(1.0)\n",
+    "gammaDD[1][1] = g*x**3 + h*y**3 + l*z**3 + m*x**2 + n*z**2 + sp.sympify(1.0)\n",
+    "gammaDD[2][2] = p*x**3 + q*y**3 + r*z**3 + s*x**2 + t*y**2 + sp.sympify(1.0)\n",
+    "gammaDD[0][1] = sp.Rational(1,10) * sp.exp(-((x-b)**2 + (y-c)**2 + (z-d)**2))\n",
+    "gammaDD[0][2] = sp.Rational(1,10) * sp.exp(-((x-g)**2 + (y-h)**2 + (z-l)**2))\n",
+    "gammaDD[1][2] = sp.Rational(1,10) * sp.exp(-((x-n)**2 + (y-o)**2 + (z-p)**2))\n",
+    "\n",
+    "import GRHD.equations as gh\n",
+    "gh.compute_sqrtgammaDET(gammaDD)\n",
+    "\n",
     "import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n",
     "LeviCivitaDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
     "LeviCivitaUUU = ixp.zerorank3()\n",
     "for i in range(3):\n",
     "    for j in range(3):\n",
     "        for k in range(3):\n",
-    "            LeviCivitaUUU[i][j][k] = LeviCivitaDDD[i][j][k] / sp.sqrt(gammadet)\n",
+    "            LeviCivitaUUU[i][j][k] = LeviCivitaDDD[i][j][k] / gh.sqrtgammaDET\n",
     "            \n",
     "B_analyticU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"B_analyticU\")\n",
     "for i in range(3):\n",
     "    B_analyticU[i] = 0\n",
     "    for j in range(3):\n",
     "        for k in range(3):\n",
-    "            B_analyticU[i] += LeviCivitaUUU[i][j][k] * sp.diff(AD[k],rfm.xxCart[j])\n"
+    "            B_analyticU[i] += LeviCivitaUUU[i][j][k] * sp.diff(AD[k],rfm.xxCart[j])\n",
+    "\n",
+    "metric_gfs_to_print = [\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD00\"),rhs=gammaDD[0][0]),\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD01\"),rhs=gammaDD[0][1]),\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD02\"),rhs=gammaDD[0][2]),\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD11\"),rhs=gammaDD[1][1]),\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD12\"),rhs=gammaDD[1][2]),\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD22\"),rhs=gammaDD[2][2]),\\\n",
+    "                      ]\n",
+    "\n",
+    "desc = \"Calculate the metric gridfunctions\"\n",
+    "name = \"calculate_metric_gfs\"\n",
+    "outCfunction(\n",
+    "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
+    "    params   =\"const paramstruct *restrict params,REAL *restrict xx[3],REAL *restrict auxevol_gfs\",\n",
+    "    body     = fin.FD_outputC(\"returnstring\",metric_gfs_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
+    "    loopopts=\"AllPoints,Read_xxs\")\n"
    ]
   },
   {
@@ -437,14 +489,19 @@
     "#define AD2GF 2\n",
     "#define NUM_EVOL_GFS 3\n",
     "\n",
-    "#define GAMMADETGF 0\n",
-    "#define B_ANALYTICU0GF 1\n",
-    "#define B_ANALYTICU1GF 2\n",
-    "#define B_ANALYTICU2GF 3\n",
-    "#define BU0GF 4\n",
-    "#define BU1GF 5\n",
-    "#define BU2GF 6\n",
-    "#define NUM_AUXEVOL_GFS 7\n"
+    "#define GAMMADD00GF 0\n",
+    "#define GAMMADD01GF 1\n",
+    "#define GAMMADD02GF 2\n",
+    "#define GAMMADD11GF 3\n",
+    "#define GAMMADD12GF 4\n",
+    "#define GAMMADD22GF 5\n",
+    "#define B_ANALYTICU0GF 6\n",
+    "#define B_ANALYTICU1GF 7\n",
+    "#define B_ANALYTICU2GF 8\n",
+    "#define BU0GF 9\n",
+    "#define BU1GF 10\n",
+    "#define BU2GF 11\n",
+    "#define NUM_AUXEVOL_GFS 12\n"
    ]
   },
   {
@@ -472,7 +529,9 @@
     "#include \"driver_AtoB.h\" // This file contains both functions we need.\n",
     "\n",
     "#include \"calculate_exact_BU.h\"\n",
-    "#include \"calculate_AD.h\"\n"
+    "#include \"calculate_AD.h\"\n",
+    "\n",
+    "#include \"calculate_metric_gfs.h\"\n"
    ]
   },
   {
@@ -528,11 +587,6 @@
     "    REAL *auxevol_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_AUXEVOL_GFS * Nxx_plus_2NGHOSTS2 * Nxx_plus_2NGHOSTS1 * Nxx_plus_2NGHOSTS0);\n",
     "    REAL *evol_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_EVOL_GFS * Nxx_plus_2NGHOSTS2 * Nxx_plus_2NGHOSTS1 * Nxx_plus_2NGHOSTS0);\n",
     "    \n",
-    "    for(int i2=0;i2<Nxx_plus_2NGHOSTS2;i2++) for(int i1=0;i1<Nxx_plus_2NGHOSTS1;i1++) for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++) {\n",
-    "        //auxevol_gfs[IDX4S(GAMMADETGF,i0,i1,i2)] = 1.0; // Flat Space\n",
-    "        auxevol_gfs[IDX4S(GAMMADETGF,i0,i1,i2)] = 1.0 - 1.0/(2.0+xx[0][i0]*xx[0][i0]+xx[1][i1]*xx[1][i1]+xx[2][i2]*xx[2][i2]);\n",
-    "    }\n",
-    "    \n",
     "    // We now want to set up the vector potential. First, we must set the coefficients. \n",
     "    if(is_gaussian) {\n",
     "        // Gaussian coefficients:\n",
@@ -553,6 +607,8 @@
     "        /*printf(\"Offsets: b,c,d = %f,%f,%f\\n\",b,c,d);\n",
     "        printf(\"Offsets: g,h,l = %f,%f,%f\\n\",g,h,l);\n",
     "        printf(\"Offsets: n,o,p = %f,%f,%f\\n\",n,o,p);*/\n",
+    "        // First, calculate the test data on our grid:\n",
+    "        calculate_metric_gfs(&params,xx,auxevol_gfs);\n",
     "    }\n",
     "    else {\n",
     "        // Polynomial coefficients\n",
@@ -602,6 +658,8 @@
     "        p = (double)(rand()%20-10);\n",
     "        q = (double)(rand()%20-10);\n",
     "        r = (double)(rand()%20-10);\n",
+    "        // First, calculate the test data on our grid:\n",
+    "        calculate_metric_gfs(&params,xx,auxevol_gfs);\n",
     "    }\n",
     "    \n",
     "    // And recalculate on our initial grid:\n",
@@ -661,7 +719,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -672,9 +730,9 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.c -o Validation/A2B_unit_test -lm`...\n",
-      "Finished executing in 0.8177812099456787 seconds.\n",
+      "Finished executing in 0.6144680976867676 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.8263235092163086 seconds.\n",
+      "Finished in 0.6246209144592285 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
@@ -682,7 +740,7 @@
       "dxx0,dxx1,dxx2 = 3.33333e-03,3.33333e-03,3.33333e-03\n",
       "dxx0,dxx1,dxx2 = 1.66667e-03,1.66667e-03,1.66667e-03\n",
       "dxx0,dxx1,dxx2 = 8.33333e-04,8.33333e-04,8.33333e-04\n",
-      "Finished in 0.4246957302093506 seconds.\n",
+      "Finished in 0.442671537399292 seconds.\n",
       "\n",
       "\n"
      ]
@@ -739,20 +797,20 @@
      "output_type": "stream",
      "text": [
       "Face | Res  |  L2 norm  | Conv. Order\n",
-      " Int | Dx   | 0.1055447 | -- \n",
-      " --  | Dx/2 | 0.0278600 | 1.92159\n",
-      " -x  | Dx   | 0.1626309 | -- \n",
-      " --  | Dx/2 | 0.0380858 | 2.09427\n",
-      " +x  | Dx   | 0.1540552 | -- \n",
-      " --  | Dx/2 | 0.0361027 | 2.09327\n",
-      " -y  | Dx   | 0.1598659 | -- \n",
-      " --  | Dx/2 | 0.0509759 | 1.64898\n",
-      " +y  | Dx   | 0.3187191 | -- \n",
-      " --  | Dx/2 | 0.0858693 | 1.89207\n",
-      " -z  | Dx   | 0.1834849 | -- \n",
-      " --  | Dx/2 | 0.0425960 | 2.10687\n",
-      " +z  | Dx   | 0.1584009 | -- \n",
-      " --  | Dx/2 | 0.0397512 | 1.99451\n"
+      " Int | Dx   | 0.0756970 | -- \n",
+      " --  | Dx/2 | 0.0199812 | 1.92159\n",
+      " -x  | Dx   | 0.1166276 | -- \n",
+      " --  | Dx/2 | 0.0273124 | 2.09428\n",
+      " +x  | Dx   | 0.1104775 | -- \n",
+      " --  | Dx/2 | 0.0258903 | 2.09327\n",
+      " -y  | Dx   | 0.1146550 | -- \n",
+      " --  | Dx/2 | 0.0365599 | 1.64897\n",
+      " +y  | Dx   | 0.2285837 | -- \n",
+      " --  | Dx/2 | 0.0615854 | 1.89206\n",
+      " -z  | Dx   | 0.1315953 | -- \n",
+      " --  | Dx/2 | 0.0305500 | 2.10686\n",
+      " +z  | Dx   | 0.1136051 | -- \n",
+      " --  | Dx/2 | 0.0285097 | 1.99450\n"
      ]
     }
    ],
