Start_to_Finish_UnitTest-GiRaFFE_NRPy: Fix a couple of small issues uncovered by Maria.

--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb
@@ -30,7 +30,9 @@
     "\n",
     "This notebook validates our A-to-B solver for use in `GiRaFFE_NRPy`. Because the original `GiRaFFE` used staggered grids and we do not, we can not trivially do a direct comparison to the old code. Instead, we will compare the numerical results with the expected analytic results. \n",
     "\n",
-    "It is, in general, good coding practice to unit test functions individually to verify that they produce the expected and intended output. Here, we expect our functions to produce the correct cross product in an arbitrary spacetime. To that end, we will choose functions that are easy to differentiate, but lack the symmetries that would trivialize the finite-difference algorithm. Higher-order polynomials are one such type of function. \n"
+    "It is, in general, good coding practice to unit test functions individually to verify that they produce the expected and intended output. Here, we expect our functions to produce the correct cross product in an arbitrary spacetime. To that end, we will choose functions that are easy to differentiate, but lack the symmetries that would trivialize the finite-difference algorithm. Higher-order polynomials are one such type of function. \n",
+    "\n",
+    "When this notebook is run, if `Use_Gaussian_Data` is `True`, the difference between the approximate and exact magnetic field will be output to text files that can be found in the same directory as this notebook. These will be read in in [Step 3](#convergence), and used there to confirm second order convergence of the algorithm. Otherwise, is `Use_Gaussian_Data` is `False`, polynomial data will be used and the significant digits of agreement beween the approximate and exact magnetic field will be printed to the screen right after the code is run [here](#compile_run).\n"
    ]
   },
   {
@@ -78,9 +80,6 @@
     "import shutil, os, sys           # Standard Python modules for multiplatform OS-level functions\n",
     "# First, we'll add the parent directory to the list of directories Python will check for modules.\n",
     "nrpy_dir_path = os.path.join(\"..\")\n",
-    "if nrpy_dir_path not in sys.path:\n",
-    "    sys.path.append(nrpy_dir_path)\n",
-    "nrpy_dir_path = os.path.join(\"..\",\"..\")\n",
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
@@ -185,9 +184,9 @@
     "    z = rfm.xxCart[2]\n",
     "\n",
     "    AD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"AD\")\n",
-    "    AD[0] = a * sp.exp(-((x-b)**2 + (y-c)**2 + (z-d)**2)/(0.05**2))\n",
-    "    AD[1] = f * sp.exp(-((x-g)**2 + (y-h)**2 + (z-l)**2)/(0.05**2))\n",
-    "    AD[2] = m * sp.exp(-((x-n)**2 + (y-o)**2 + (z-p)**2)/(0.05**2))"
+    "    AD[0] = a * sp.exp(-((x-b)**2 + (y-c)**2 + (z-d)**2))\n",
+    "    AD[1] = f * sp.exp(-((x-g)**2 + (y-h)**2 + (z-l)**2))\n",
+    "    AD[2] = m * sp.exp(-((x-n)**2 + (y-o)**2 + (z-p)**2))"
    ]
   },
   {
@@ -730,9 +729,9 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.c -o Validation/A2B_unit_test -lm`...\n",
-      "Finished executing in 0.6144680976867676 seconds.\n",
+      "Finished executing in 0.6154305934906006 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.6246209144592285 seconds.\n",
+      "Finished in 0.6281797885894775 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
@@ -740,7 +739,7 @@
       "dxx0,dxx1,dxx2 = 3.33333e-03,3.33333e-03,3.33333e-03\n",
       "dxx0,dxx1,dxx2 = 1.66667e-03,1.66667e-03,1.66667e-03\n",
       "dxx0,dxx1,dxx2 = 8.33333e-04,8.33333e-04,8.33333e-04\n",
-      "Finished in 0.442671537399292 seconds.\n",
+      "Finished in 0.5726468563079834 seconds.\n",
       "\n",
       "\n"
      ]
@@ -758,9 +757,11 @@
     "print(\"Now running...\\n\")\n",
     "start = time.time()\n",
     "!./Validation/A2B_unit_test 1 1 1 0\n",
-    "# To do a convergence test, we'll also need a second grid with twice the resolution.\n",
-    "!./Validation/A2B_unit_test 7 7 7 1\n",
-    "!./Validation/A2B_unit_test 19 19 19 1\n",
+    "if Use_Gaussian_Data:\n",
+    "    # To do a convergence test, we'll also need a second grid with twice the resolution.\n",
+    "    !./Validation/A2B_unit_test 7 7 7 1\n",
+    "\n",
+    "# !./Validation/A2B_unit_test 19 19 19 1\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n"
    ]
@@ -797,20 +798,20 @@
      "output_type": "stream",
      "text": [
       "Face | Res  |  L2 norm  | Conv. Order\n",
-      " Int | Dx   | 0.0756970 | -- \n",
-      " --  | Dx/2 | 0.0199812 | 1.92159\n",
-      " -x  | Dx   | 0.1166276 | -- \n",
-      " --  | Dx/2 | 0.0273124 | 2.09428\n",
-      " +x  | Dx   | 0.1104775 | -- \n",
-      " --  | Dx/2 | 0.0258903 | 2.09327\n",
-      " -y  | Dx   | 0.1146550 | -- \n",
-      " --  | Dx/2 | 0.0365599 | 1.64897\n",
-      " +y  | Dx   | 0.2285837 | -- \n",
-      " --  | Dx/2 | 0.0615854 | 1.89206\n",
-      " -z  | Dx   | 0.1315953 | -- \n",
-      " --  | Dx/2 | 0.0305500 | 2.10686\n",
-      " +z  | Dx   | 0.1136051 | -- \n",
-      " --  | Dx/2 | 0.0285097 | 1.99450\n"
+      " Int | Dx   | 0.0000005 | -- \n",
+      " --  | Dx/2 | 0.0000001 | 1.90520\n",
+      " -x  | Dx   | 0.0000008 | -- \n",
+      " --  | Dx/2 | 0.0000002 | 2.08857\n",
+      " +x  | Dx   | 0.0000008 | -- \n",
+      " --  | Dx/2 | 0.0000002 | 2.08857\n",
+      " -y  | Dx   | 0.0000008 | -- \n",
+      " --  | Dx/2 | 0.0000002 | 1.64224\n",
+      " +y  | Dx   | 0.0000016 | -- \n",
+      " --  | Dx/2 | 0.0000004 | 1.87830\n",
+      " -z  | Dx   | 0.0000010 | -- \n",
+      " --  | Dx/2 | 0.0000002 | 2.09971\n",
+      " +z  | Dx   | 0.0000008 | -- \n",
+      " --  | Dx/2 | 0.0000002 | 1.99483\n"
      ]
     }
    ],
