--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux.ipynb
@@ -24,7 +24,7 @@
     "**Validation Notes:** This module will validate the routines in [Tutorial-GiRaFFE_NRPy-Induction_Equation](Tutorial-GiRaFFE_NRPy-Induction_Equation.ipynb).\n",
     "\n",
     "### NRPy+ Source Code for this module: \n",
-    "* [GiRaFFE_NRPy/Induction_Equation.py](../../edit/in_progress/GiRaFFE_NRPy/Induction_Equation.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-Induction_Equation.ipynb) Generates the driver to compute the magnetic field from the vector potential in arbitrary spactimes.\n",
+    "* [GiRaFFE_NRPy/Afield_flux.py](../../edit/in_progress/GiRaFFE_NRPy/Afield_flux.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb) Generates the symbolic expressions needed to compute the flux term of the induction equation right-hand side.\n",
     "\n",
     "## Introduction:\n",
     "\n",
