Start_to_Finish_UnitTest-GiRaFFE_NRPy: Added clarifying details to the introductions of each unit test about what numbers are output, and where.

--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -26,7 +26,9 @@
     "\n",
     "## Introduction:\n",
     "\n",
-    "This notebook validates the NRPyfied C2P and P2C solvers against the original `GiRaFFE` code. This will be done at a point with a random but realistic spacetime and a variety of Poynting fluxes and Valencia velocities to test edge cases.\n"
+    "This notebook validates the NRPyfied C2P and P2C solvers against the original `GiRaFFE` code. This will be done at a point with a random but realistic spacetime and a variety of Poynting fluxes and Valencia velocities to test edge cases.\n",
+    "\n",
+    "When this notebook is run, the significant digits of agreement between the old `GiRaFFE` and new `GiRaFFE_NRPy` versions of the algorithm outputs of Poynting flux and Valencia three-velocity will be printed to the screen right after the code is run [here](#compile_run)."
    ]
   },
   {
