--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb
@@ -28,7 +28,9 @@
     "\n",
     "## Introduction:\n",
     "\n",
-    "This notebook validates the PPM routine for use in `GiRaFFE_NRPy`. This code was adapted from the corresonding algorithm used in the original `GiRaFFE` to work with the NRPy+ infrastructure. So, we will test it against that code by considering an analytic form of the three-velocity and magnetic fields over a small grid. We will also repeat the test with an added sharp feature, which is an important test for this algorithm since it is specifically designed to handle them. \n"
+    "This notebook validates the PPM routine for use in `GiRaFFE_NRPy`. This code was adapted from the corresonding algorithm used in the original `GiRaFFE` to work with the NRPy+ infrastructure. So, we will test it against that code by considering an analytic form of the three-velocity and magnetic fields over a small grid. We will also repeat the test with an added sharp feature, which is an important test for this algorithm since it is specifically designed to handle them. \n",
+    "\n",
+    "When this notebook is run, the significant digits of agreement between the old `GiRaFFE` and new `GiRaFFE_NRPy` versions of the algorithm will be printed to the screen right after the code is run [here](#compile_run).\n"
    ]
   },
   {
