--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb
@@ -28,7 +28,9 @@
     "\n",
     "## Introduction:\n",
     "\n",
-    "This notebook validates the initial data routines that we will use for `GiRaFFE_NRPy`, collectively referred to as `GiRaFFEfood_NRPy`. To do so, we will generate the initial data with both our code and the original `GiRaFFEfood` code. Then, we will directly compare the velocities and show round-off level agreement between the two. We will also run the A-to-B solver from each code, and then show convergence of the magnetic fields to demonstrate agreement between the vector potentials (this is necessary because the staggered grids in the original `GiRaFFE` prevent a direct comparison of the vector potentials). \n"
+    "This notebook validates the initial data routines that we will use for `GiRaFFE_NRPy`, collectively referred to as `GiRaFFEfood_NRPy`. To do so, we will generate the initial data with both our code and the original `GiRaFFEfood` code. Then, we will directly compare the velocities and show round-off level agreement between the two. We will also run the A-to-B solver from each code, and then show convergence of the magnetic fields to demonstrate agreement between the vector potentials (this is necessary because the staggered grids in the original `GiRaFFE` prevent a direct comparison of the vector potentials). \n",
+    "\n",
+    "When this notebook is run, the significant digits of agreement between the old `GiRaFFE` and new `GiRaFFE_NRPy` versions of the algorithm will be evaluated. If the agreement falls below a thresold, the point, quantity, and level of agreement are reported [here](#compile_run).\n"
    ]
   },
   {
