GiRaFFE_NRPy: Remove all floats from sympify function calls.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
@@ -231,7 +231,7 @@
     "    detm = b*b - 4*a*c\n",
     "    \n",
     "    import Min_Max_and_Piecewise_Expressions as noif\n",
-    "    detm = sp.sqrt(noif.max_noif(sp.sympify(0.0),detm))\n",
+    "    detm = sp.sqrt(noif.max_noif(sp.sympify(0),detm))\n",
     "    global cplus,cminus\n",
     "    cplus  = sp.Rational(1,2)*(-b/a + detm/a)\n",
     "    cminus = sp.Rational(1,2)*(-b/a - detm/a)\n"
@@ -270,12 +270,10 @@
     "    # Now, we need to set cmax to the larger of cpr,cpl, and 0\n",
     "    \n",
     "    import Min_Max_and_Piecewise_Expressions as noif\n",
-    "    cmax = noif.max_noif(cpr,cpl)\n",
-    "    cmax = noif.max_noif(cmax,sp.sympify(0.0))\n",
+    "    cmax = noif.max_noif(noif.max_noif(cpr,cpl),sp.sympify(0))\n",
     "    \n",
     "    # And then, set cmin to the smaller of cmr,cml, and 0\n",
-    "    cmin =  noif.min_noif(cmr,cml)\n",
-    "    cmin = -noif.min_noif(cmin,sp.sympify(0.0))\n"
+    "    cmin = -noif.min_noif(noif.min_noif(cmr,cml),sp.sympify(0))\n"
    ]
   },
   {
