--- a/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -282,7 +282,7 @@
     "    for i in range(3):\n",
     "        for j in range(3):\n",
     "            # \\bar{v}^i = 4 \\pi \\gamma^{ij} {\\tilde S}_j / (\\sqrt{\\gamma} B^2)\n",
-    "            ValenciavU[i] += sp.sympify(4.0)*M_PI*gammaUU[i][j]*StildeD[j]/(GRHD.sqrtgammaDET*B2)\n"
+    "            ValenciavU[i] += sp.sympify(4)*M_PI*gammaUU[i][j]*StildeD[j]/(GRHD.sqrtgammaDET*B2)\n"
    ]
   },
   {
@@ -325,7 +325,7 @@
     "    # Remember, we only do this if abs(z) < (k+0.01)*dz. Note that we add 0.01; this helps\n",
     "    # avoid floating point errors and division by zero. This is the same as abs(z) - (k+0.01)*dz<0\n",
     "    coord = nrpyAbs(rfm.xx[2])\n",
-    "    bound =(grid_points_from_z_plane+sp.sympify(0.01))*gri.dxx[2]\n",
+    "    bound =(grid_points_from_z_plane+sp.Rational(1,100))*gri.dxx[2]\n",
     "    ValenciavU[2] = noif.coord_leq_bound(coord,bound)*(newdriftvU2+betaU[2])/alpha \\\n",
     "                  + noif.coord_greater_bound(coord,bound)*ValenciavU[2]\n"
    ]
@@ -364,7 +364,7 @@
     "    # Now that we have the z component, it's time to substitute its Valencia form in.\n",
     "    # Remember, we only do this if abs(z) < (k+0.01)*dz. Note that we add 0.01; this helps\n",
     "    # avoid floating point errors and division by zero. This is the same as abs(z) - (k+0.01)*dz<0\n",
-    "    boundary = nrpyAbs(rfm.xx[2]) - (grid_points_from_z_plane+sp.sympify(0.01))*gri.dxx[2]\n",
+    "    boundary = nrpyAbs(rfm.xx[2]) - (grid_points_from_z_plane+sp.Rational(1,100))*gri.dxx[2]\n",
     "    ValenciavU[2] = min_normal0(boundary)*(newdriftvU2+betaU[2])/alpha \\\n",
     "                  + max_normal0(boundary)*ValenciavU[2]\n",
     "```"
