--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb
@@ -150,7 +150,7 @@
     "ValenciavU[1] = b*x + c*y + a*z\n",
     "ValenciavU[2] = c*x + a*y + b*z\n",
     "\n",
-    "psi6Phi = sp.sympify(1.0) - (x + 2*y + z)"
+    "psi6Phi = sp.sympify(1) - (x + sp.sympify(2)*y + z)"
    ]
   },
   {
@@ -464,16 +464,16 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/BCs_unit_test.c -o Validation/BCs_unit_test -lm`...\n",
-      "Finished executing in 0.8147997856140137 seconds.\n",
+      "Finished executing in 0.8150804042816162 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.8274576663970947 seconds.\n",
+      "Finished in 0.8250532150268555 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
       "dxx0,dxx1,dxx2 = 2.85714e-01,2.85714e-01,2.85714e-01\n",
       "All quantities agree at all points!\n",
-      "Finished in 0.13088417053222656 seconds.\n",
+      "Finished in 0.11984491348266602 seconds.\n",
       "\n",
       "\n"
      ]
