--- a/in_progress/Tutorial-GiRaFFE_NRPy-BCs.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-BCs.ipynb
@@ -89,15 +89,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile $outdir/GiRaFFE_boundary_conditions.h\n",
     "// Currently, we're using basic Cartesian boundary conditions, pending fixes by Zach.\n",
@@ -133,15 +125,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
     "// Basic Copy boundary conditions\n",
@@ -244,7 +228,7 @@
    ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
-    "void apply_bcs(const paramstruct *restrict params,REAL *gfs,REAL *aux_gfs) {\n",
+    "void apply_bcs_potential(const paramstruct *restrict params,REAL *gfs) {\n",
     "#include \"set_Cparameters.h\"\n",
     "    // First, we apply extrapolation boundary conditions to AD\n",
     "#pragma omp parallel for\n",
@@ -274,53 +258,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This next set of loops operates almost identically as above, but it applies BCs to the velocities instead. "
+    "This code works almost identically to the above. It applies copy boundary conditions, but is currently not in use. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
-    "    // Apply outflow/extrapolation boundary conditions to ValenciavU by passing VALENCIAVU0 as which_gf_0\n",
-    "    for(int which_gf=VALENCIAVU0GF;which_gf<=VALENCIAVU2GF;which_gf++) {\n",
-    "    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
-    "    int imax[3] = { Nxx_plus_2NGHOSTS0-NGHOSTS, Nxx_plus_2NGHOSTS1-NGHOSTS, Nxx_plus_2NGHOSTS2-NGHOSTS };\n",
-    "    for(int which_gz = 0; which_gz < NGHOSTS; which_gz++) {\n",
-    "      FACE_UPDATE_OUTFLOW(which_gf, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); imin[0]--;\n",
-    "      FACE_UPDATE_OUTFLOW(which_gf, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); imax[0]++;\n",
-    "\n",
-    "      FACE_UPDATE_OUTFLOW(which_gf, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); imin[1]--;\n",
-    "      FACE_UPDATE_OUTFLOW(which_gf, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); imax[1]++;\n",
-    "\n",
-    "      FACE_UPDATE_OUTFLOW(which_gf, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); \n",
-    "        imin[2]--;\n",
-    "      FACE_UPDATE_OUTFLOW(which_gf, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); \n",
-    "        imax[2]++;\n",
-    "    }\n",
-    "    }\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Once again, this code works almost identically to the above. It applies copy boundary conditions, but is currently not in use. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -352,6 +295,50 @@
     "    }\n",
     "    }*/\n",
     "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once again, this next set of loops operates almost identically as above, but it applies BCs to the velocities instead. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
+    "void apply_bcs_velocity(const paramstruct *restrict params,REAL *aux_gfs) {\n",
+    "#include \"set_Cparameters.h\"\n",
+    "    // Apply outflow/extrapolation boundary conditions to ValenciavU by passing VALENCIAVU0 as which_gf_0\n",
+    "    for(int which_gf=VALENCIAVU0GF;which_gf<=VALENCIAVU2GF;which_gf++) {\n",
+    "    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
+    "    int imax[3] = { Nxx_plus_2NGHOSTS0-NGHOSTS, Nxx_plus_2NGHOSTS1-NGHOSTS, Nxx_plus_2NGHOSTS2-NGHOSTS };\n",
+    "    for(int which_gz = 0; which_gz < NGHOSTS; which_gz++) {\n",
+    "      FACE_UPDATE_OUTFLOW(which_gf, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); imin[0]--;\n",
+    "      FACE_UPDATE_OUTFLOW(which_gf, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); imax[0]++;\n",
+    "\n",
+    "      FACE_UPDATE_OUTFLOW(which_gf, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); imin[1]--;\n",
+    "      FACE_UPDATE_OUTFLOW(which_gf, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); imax[1]++;\n",
+    "\n",
+    "      FACE_UPDATE_OUTFLOW(which_gf, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); \n",
+    "        imin[2]--;\n",
+    "      FACE_UPDATE_OUTFLOW(which_gf, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); \n",
+    "        imax[2]++;\n",
+    "    }\n",
+    "    }\n",
+    "}"
    ]
   },
   {
