--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb
@@ -22,9 +22,9 @@
     "**Validation Notes:** This module will validate the routines in [Tutorial-GiRaFFEfood_NRPy_Exact_Wald](Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb), [Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator](Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.ipynb), and [Tutorial-GiRaFFEfood_NRPy_1D_tests](Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb).\n",
     "\n",
     "### NRPy+ Source Code for this module: \n",
-    "* [GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_Exact_Wald.py](../../edit/in_progress/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_Exact_Wald.py) [\\[**tutorial**\\]](Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb) Generates the conservative-to-primitive and primitive-to-conservative solvers.\n",
-    "* [GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_Aligned_Rotator.py](../../edit/in_progress/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_Aligned_Rotator.py) [\\[**tutorial**\\]](Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.ipynb) Generates the conservative-to-primitive and primitive-to-conservative solvers.\n",
-    "* [GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests.py](../../edit/in_progress/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests.py) [\\[**tutorial**\\]](Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb) Generates the conservative-to-primitive and primitive-to-conservative solvers.\n",
+    "* [GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_Exact_Wald.py](../../edit/in_progress/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_Exact_Wald.py) [\\[**tutorial**\\]](Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb) Generates Exact Wald initial data\n",
+    "* [GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_Aligned_Rotator.py](../../edit/in_progress/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_Aligned_Rotator.py) [\\[**tutorial**\\]](Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.ipynb) Generates Aligned Rotator initial data\n",
+    "* [GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests.py](../../edit/in_progress/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests.py) [\\[**tutorial**\\]](Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb) Generates Alfv&eacute;n Wave initial data.\n",
     "\n",
     "## Introduction:\n",
     "\n",
