--- a/in_progress/Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb
@@ -253,7 +253,8 @@
     "        }\n",
     "    }\n",
     "\n",
-    "\"\"\")\n",
+    "\"\"\",\n",
+    "    rel_path_for_Cparams=os.path.join(\"../\"))\n",
     "\n",
     "with open(os.path.join(Ccodesdir,\"interpolate_metric_gfs_to_cell_faces.h\"),\"a\") as file:\n",
     "    file.write(interp_Cfunc)"
